More Ethiopia! Yay!

--- a/localisation/KR_Ethiopia_l_english.yml
+++ b/localisation/KR_Ethiopia_l_english.yml
@@ -73,10 +73,6 @@ ETH_Repair_Railways:0 "Repair the Railroads"
 ETH_Repair_Railways_desc:0 "We recently purchased the DPAEB railroads from Germany. However, many stretches of the line are in poor condition. They must be repaired!"
 ETH_Reform_Railways:0 "Reform the Railroads"
 ETH_Reform_Railways_desc:0 "In order to help our economy, it would be a wise move to lay more branch lines out to the countryside and to the sea"
-ETH_Seize_Ger_Som:0 "Seize German Somaliland"
-ETH_Seize_Ger_Som_desc:0 "The Germans took land that was rightly ours in the first Weltkrieg. We must now take it back from them!"
-ETH_Intergrate_Ger_Som:0 "Integrate German Somaliland"
-ETH_Intergrate_Ger_Som_desc:0 "Now we have seized German Somaliland we must integrate it into glorious Ethiopia!"
 ETH_Navy:0 "A Navy for Ethiopia"
 ETH_Navy_desc:0 "We must build a navy for our nation if we are to become a great power again!"
 ETH_Strat_Place:0 "Use our Strategic Placement"
@@ -109,21 +105,67 @@ ETH_Air_S:0 "Airports in the South"
 ETH_Air_S_desc:0 "The construction of airports in the south will be completed"
 ETH_Make_Planes:0 "Production Reforms"
 ETH_Make_Planes_desc:0 "We must reform the way we produce our planes in order to optimise the speed of their production. More planes also has the fortunate side effect of more tactics being developed for them."
-ETH_Out_Amb:0 "Outwards Ambitions"
-ETH_Out_Amb_desc:0 "Through our reforms, Ethiopia has once more become strong enough to hold its own against the European colonials. It is time indeed to consider what path Ethiopia will take in achieving its place in this world."
-ETH_Iso_S:0 "Isolationism"
-ETH_Iso_S:0 "We must not make our choice rashly. Rather, we must consider a wide range of ways to cement our strength. One of these ways is isolationism - and regardless of if we commit to it or not, we should follow some of its teachings."
-ETH_PanAfrica:0 "The Pan-Afrikan Movement"
-ETH_PanAfrica_desc:0 "We must not make our choice rashly. Rather, we must consider a wide range of ways to cement our strength. One of these ways is the PanAfrican movement - and regardless of if we commit to it or not, we should follow some of its teachings."
-ETH_MPB:0 "Closer Bonds with Major Nations"
-ETH_MPB_desc:0 "We must not make our choice rashly. Rather, we must consider a wide range of ways to cement our strength. One of these ways is forging closer ties with the major powers, European or otherwise - and regardless of if we commit to it or not, we should follow some of its teachings."
+# Dervish & Out #
 ETH_Blindness_Horn:0 "A Blindness over the Horn"
 ETH_Blindness_Horn_desc:0 "Germany has turned to look at its economy, MittleAfrika at its natives and Egypt at the Ottomans. It looks like the time has come for the conflict between the Dervish State and us to boil back up once again."
 ETH_Germany_Not_Watching:0 "Unlocks the Reforms and our own Outwards Ambitions."
 ETH_Integrate_Dervish:0 "Integrate the ex-Dervish State"
 ETH_Integrate_Dervish_desc:0 "There is still uncertainty about the fate of Somaliland. However, we must properly integrate it into our nation and reap the benefits."
 ETH_Derv_Int:0 "Strife within the ex-Dervish State in Somaliland will cease and it will be fully integrated"
+ETH_Out_Amb:0 "Outwards Ambitions"
+ETH_Out_Amb_desc:0 "Through our reforms, Ethiopia has once more become strong enough to hold its own against the European colonials. It is time indeed to consider what path Ethiopia will take in achieving its place in this world."
 ETH_Outwards_Amb:0 "We may now choose our Outwards Ambitions"
+ETH_Iso_S:0 "Consolidation"
+ETH_Iso_S:0 "We must not make our choice rashly. Rather, we must consider a wide range of ways to cement our strength. One of these ways is isolationism - and regardless of if we commit to it or not, we should follow some of its teachings."
+ETH_Fort_Idea:0 "Egyptian Fortifications"
+ETH_Fort_Idea_desc:0 "As part of our consolidation program, we must fortify our borders with the Egyptians."
+ETH_Fort_City:0 "Fortified Citys"
+ETH_Fort_City_desc:0 "It is time to add minor fortifications to our cities. This will help in the country's defence, if an attack should come, but will also help in the event of further rebellion!"
+ETH_Fort_Borders:0 "Southern Forts"
+ETH_Fort_Borders_desc:0 "Paranoia has grown with our consolidation. The Germans, once our friends, need to now be protected against. We must fortify our border with the colonial bastards, MittleAfrika"
+ETH_Sea_Forts:0 "Sea Fortifications"
+ETH_Sea_Forts_desc:0 "It has come to our attention that attacks may not only come from our borders, but also from the sea. We must protect against this."
+ETH_Anti_Air:0 "Death to the Skies!"
+ETH_Anti_Air_desc:0 "Another step in our 'consolidation' is to control the skies. We must build limited anti-air capabilities to compliment our brave air force."
+ETH_Radar_C:0 "Radar"
+ETH_Radar_C_desc:0 "Using new RADAR capabilities we are able to better defend ourselves - ideal!"
+ETH_Commit_Self:0 "Commit Only to Ourselves"
+ETH_Commit_Self_desc:0 "We have decided we don't need the support of a major nation, and we instead prefer to neutral."
+ETH_Proj_Exc:0 "Project Excavate"
+ETH_Proj_Exc_desc:0 "The Weltkrieg was based around trench warfare. Times may have changes, but there is no reason this tactic shouldn't work now, is there?"
+ETH_Fixed_Arty:0 "Fixed-Place Artillery"
+ETH_Fixed_Arty_desc:0 "By placing fixed artillery on our borders, we can significantly increase the defensive capabilities of our forts."
+ETH_Proj_Alt:0 "Project Altitude"
+ETH_Proj_Alt_desc:0 "it is important to have a small number of elite divisions, one of which should be centred around fighting in the mountains"
+ETH_Proj_Wave:0 "Project Wave"
+ETH_Proj_Wave_desc:0 "In addition to our mountaneers, we need elites to specialising in amphibious warfare."
+ETH_Non_Agression:0 "Non-Agression and Furthered Consolidation"
+ETH_Non_Agression_desc:0 "We have no plans to invade our neighbours at this stage, so we should instead focus our interal reforms."
+ETH_Ger_Q:0 "The German Question"
+ETH_Ger_Q_desc:0 "Germany is weak - fighting the syndarchists and its economy. We must now decided if we need to continue our relations with them."
+ETH_Seize_Ger_Som:0 "Seize German Somaliland"
+ETH_Seize_Ger_Som_desc:0 "The Germans took land that was rightly ours in the first Weltkrieg. We must now take it back from them!"
+ETH_Intergrate_Ger_Som:0 "Integrate German Somaliland"
+ETH_Intergrate_Ger_Som_desc:0 "Now we have seized German Somaliland we must integrate it into glorious Ethiopia!"
+ETH_Pan_Dream:0 "A PanAfrican Dream"
+ETH_Pan_Dream_desc:0 "Our heroic liberation of German colonial land may be the start of something much greater - the PanAfrican movement. However, our economy is not in a fit state to continue this. We can at least keep the dream going in our populaton."
+ETH_MPB:0 "Closer Bonds with Major Nations"
+ETH_MPB_desc:0 "We must not make our choice rashly. Rather, we must consider a wide range of ways to cement our strength. One of these ways is forging closer ties with the major powers, European or otherwise - and regardless of if we commit to it or not, we should follow some of its teachings."
+ETH_JAP_Com:0 "Japanese Companies"
+ETH_JAP_Com_desc:0 "Japanese comapnies have expressed an interest in setting up in Ethiopia. Letting them do so would both please the Japanese government and give us some economic benefits."
+ETH_JAP_Interests:0 "Japan has developed an interest in our country"
+ETH_USA_Int:0 "An American Interest"
+ETH_USA_Int_desc:0 "The Americans have expressed an interest in the strategic placement of our country for trade interdiction. Maybe we should dig at this interest for some of our own gain?"
+ETH_USA_Interests:0 "The USA has developed an interest in our country"
+ETH_ENT_Offer:0 "The Entente's Offer"
+ETH_ENT_Offer_dec:0 "Our strategic placement has come to the attention of the Entente, who believe our placement could be very useful for trade interdiction."
+ETH_ENT_Interests:0 "The Entente has developed an interest in our country"
+ETH_GER_Sphere:0 "The German Sphere of Influence"
+ETH_GER_Sphere_desc:0 "We are positioned in an area that Germany believes is their sphere of influence. They wish to further relations with us for that reason."
+ETH_GER_Interests:0 "Germany has developed an interest in our country"
+ETH_OTT_Rel:0 "Ethiopian-Ottoman Relations"
+ETH_OTT_Rel_desc:0 "The Ottoman Empire is interested in the development of relations with us, especially due to our placement at the southern border of their possible enemy, Egypt."
+ETH_OTT_Interests:0 "The Ottoman Empire has developed an interest in our country"
 
 ### Events ###
 ethiopia.1.t:0 "Ethiopia, an Empire at the Crossroads"
