Spelling fixes for all

--- a/localisation/KR_Ethiopia_l_english.yml
+++ b/localisation/KR_Ethiopia_l_english.yml
@@ -105,7 +105,8 @@ ETH_Air_S:0 "Airports in the South"
 ETH_Air_S_desc:0 "The construction of airports in the south will be completed"
 ETH_Make_Planes:0 "Production Reforms"
 ETH_Make_Planes_desc:0 "We must reform the way we produce our planes in order to optimise the speed of their production. More planes also has the fortunate side effect of more tactics being developed for them."
-# Dervish & Out #
+
+### Dervish & Out ###
 ETH_Blindness_Horn:0 "A Blindness over the Horn"
 ETH_Blindness_Horn_desc:0 "Germany has turned to look at its economy, MittleAfrika at its natives and Egypt at the Ottomans. It looks like the time has come for the conflict between the Dervish State and us to boil back up once again."
 ETH_Germany_Not_Watching:0 "Unlocks the Reforms and our own Outwards Ambitions."
@@ -138,21 +139,21 @@ ETH_Fixed_Arty_desc:0 "By placing fixed artillery on our borders, we can signifi
 ETH_Proj_Alt:0 "Project Altitude"
 ETH_Proj_Alt_desc:0 "it is important to have a small number of elite divisions, one of which should be centred around fighting in the mountains"
 ETH_Proj_Wave:0 "Project Wave"
-ETH_Proj_Wave_desc:0 "In addition to our mountaneers, we need elites to specialising in amphibious warfare."
-ETH_Non_Agression:0 "Non-Agression and Furthered Consolidation"
-ETH_Non_Agression_desc:0 "We have no plans to invade our neighbours at this stage, so we should instead focus our interal reforms."
+ETH_Proj_Wave_desc:0 "In addition to our mountaineers, we need elites to specialising in amphibious warfare."
+ETH_Non_Agression:0 "Non-Aggression and Furthered Consolidation"
+ETH_Non_Agression_desc:0 "We have no plans to invade our neighbours at this stage, so we should instead focus our internal reforms."
 ETH_Ger_Q:0 "The German Question"
-ETH_Ger_Q_desc:0 "Germany is weak - fighting the syndarchists and its economy. We must now decided if we need to continue our relations with them."
+ETH_Ger_Q_desc:0 "Germany is weak - fighting the Syndicalists and its economy. We must now decided if we need to continue our relations with them."
 ETH_Seize_Ger_Som:0 "Seize German Somaliland"
 ETH_Seize_Ger_Som_desc:0 "The Germans took land that was rightly ours in the first Weltkrieg. We must now take it back from them!"
 ETH_Intergrate_Ger_Som:0 "Integrate German Somaliland"
 ETH_Intergrate_Ger_Som_desc:0 "Now we have seized German Somaliland we must integrate it into glorious Ethiopia!"
 ETH_Pan_Dream:0 "A PanAfrican Dream"
-ETH_Pan_Dream_desc:0 "Our heroic liberation of German colonial land may be the start of something much greater - the PanAfrican movement. However, our economy is not in a fit state to continue this. We can at least keep the dream going in our populaton."
+ETH_Pan_Dream_desc:0 "Our heroic liberation of German colonial land may be the start of something much greater - the PanAfrican movement. However, our economy is not in a fit state to continue this. We can at least keep the dream going in our population."
 ETH_MPB:0 "Closer Bonds with Major Nations"
 ETH_MPB_desc:0 "We must not make our choice rashly. Rather, we must consider a wide range of ways to cement our strength. One of these ways is forging closer ties with the major powers, European or otherwise - and regardless of if we commit to it or not, we should follow some of its teachings."
 ETH_JAP_Com:0 "Japanese Companies"
-ETH_JAP_Com_desc:0 "Japanese comapnies have expressed an interest in setting up in Ethiopia. Letting them do so would both please the Japanese government and give us some economic benefits."
+ETH_JAP_Com_desc:0 "Japanese companies have expressed an interest in setting up in Ethiopia. Letting them do so would both please the Japanese government and give us some economic benefits."
 ETH_JAP_Interests:0 "Japan has developed an interest in our country"
 ETH_USA_Int:0 "An American Interest"
 ETH_USA_Int_desc:0 "The Americans have expressed an interest in the strategic placement of our country for trade interdiction. Maybe we should dig at this interest for some of our own gain?"
