Some tweaks to the US Factions

--- a/localisation/KR_Combined_Syndicates_of_America_l_english.yml
+++ b/localisation/KR_Combined_Syndicates_of_America_l_english.yml
@@ -104,16 +104,16 @@ CSA_a_gun_in_every_hand_desc:0 "We need to make sure that every solider in every
 CSA_military_auto_unions_desc:0 "The various automotive unions believe that instead of pushing for as many militia as possible, that we should rely on Speed. Cars and Tanks of all types are the future of the warfare after all. So they are pushing that we should support this plan and strike hard and fast. "
 CSA_tank_unions:0 "Tank Unions"
 CSA_tank_unions_desc:0 "To win this war, we need both speed and firepower, we need tanks. There are a number of automotive unions that have started building tanks. We should focus on making a union for the tank production to produce tanks faster so that we can bring the reactionary capitalists to their knees!"
-CSA_army:0 "American Revolutionary Army"
+CSA_army:0 "A Well Regulated Army"
 CSA_army_desc:0 "To win the war, we need discipline and that requires an army, not a rag-tag bunch of militias. Capitalism can only be defeated by the iron discipline of labour."
 CSA_fighting_women:0 "The Rebel Girl"
 CSA_fighting_women_desc:0 "That's the Rebel Girl, that's the Rebel Girl! / To the working class she's a precious pearl. / She brings courage, pride and joy / To the fighting Rebel Boy. / We've had girls before, but we need some more / In the Industrial Workers of the World. For it's great to fight for freedom / With a Rebel Girl."
 CSA_milita_integration:0 "Integrate the Militias"
 CSA_milita_integration_desc:0 "Now that we have decided to form a proper army, we should integrate the militias into the new Revolutionary army. This way that they are now part of the fighting force. Some will resist of course, but this is necessary for the good of the Revolution. We can help the integration by letting them keep their current elected officers. "
-CSA_new_model_army:0 "The Red Army"
-CSA_new_model_army_desc:0 "The army needs to be have proper planning and discipline. Thus we should push for a new model army. An organised army that is lead by officers who work together with the proper planning and discipline needed to smash capitalism."
-CSA_centralized_command:0 "Centralised Military Command"
-CSA_centralized_command_desc:0 "To wage war against the reactionaries and the capitalists we need a centralised military command. A joint chiefs of staff shall be created that shall be created to plan the war against the reactionary forces that keep the workers in wage slavery."
+CSA_new_model_army:0 "Centralized High Command"
+CSA_new_model_army_desc:0 "To wage war against the reactionaries and the capitalists we need a centralised military command. A joint chiefs of staff shall be created that shall be created to plan the war against the reactionary forces that keep the workers in wage slavery."
+CSA_centralized_command:0 "Officer Initiatives"
+CSA_centralized_command_desc:0 "Centralized planning is good, but few plans survive contact with the enemy. We should train our officers to be able to properly adjust plan on the move and adapt their plans. With rapid planning we will be able to destroy the reactionary capitalists once and for all."
 CSA_war_is_a_racket:0 "War is a Racket"
 CSA_war_is_a_racket_desc:0 "War is a racket. it always has been. We say no to that. War has been fought for the greed of capitalists throughout history. But not in the new Revolutionary army. Here we fight for the people. To this end, our army shall be organised to protect the lives of soldiers. We shall instead destroy capitalism with overwhelming firepower. Bullets are cheap, lives are not."
 CSA_peoples_artilary:0 "Fire the Guns"
@@ -256,8 +256,8 @@ CSA_democratic_socialism:0 "Democratic Socialism"
 CSA_democratic_socialism_desc:0 "America is a democracy however until recently that was never true. We claimed to be a democracy while being a plutocracy. We have broken the chains. Now we can bring true democracy, democratic socialism to the people. The chains are broken!"
 CSA_bill_of_rights_syndicalism:0 "Syndicalist Bill of Rights"
 CSA_bill_of_rights_syndicalism_desc:0 "The bill of rights of the old constitution enshrines the most important rights. We need to make our own bill of rights to enshrine the values of syndicalism. This will help protect human rights of all the people throughout America. "
-CSA_workers_republic:0 "Worker's Republic"
-CSA_workers_republic_desc:0 "America has been transformed from a capitalistic dictatorship of the bourgeois into a socialist republic where power is balanced between the worker's states and the Federal government. Though it will take time for the revolution to fully impact all of society, we have set the new republic down a better and brighter future. "
+CSA_workers_republic:0 "Worker's Commonwealth"
+CSA_workers_republic_desc:0 "America has been transformed from a capitalistic dictatorship of the bourgeois into a socialist Commonwealth where power is balanced between the worker's states and the Federal government. Though it will take time for the revolution to fully impact all of society, we have set the new Commonwealth down a better and brighter future. "
 CSA_syndaclist_buercracy:0 "Syndicalist Bureaucracy"
 CSA_syndaclist_buercracy_desc:0 "With the new government being worked out, the matter of the new bureaucracy came up. The debate between a new socialist revolutionary civil service or a state bureaucracy. We have chosen to side with the idea of a new revolutionary state bureaucracy. The government shall take charge in bringing the revolution to every American throughout the country."
 CSA_state_education:0 "State Education"
@@ -351,7 +351,7 @@ CSA_liberty_ships_desc:0 "The world shall see our ships coming to help fight for
 CSA_war_plan_black:0 "War Plan Black"
 CSA_war_plan_black_desc:0 "The time has come to strike down the great reactionary empire that is the Kaiserreich. No more shall the German empire keep the world in its chains. No more shall people wonder how long their capitalistic slavery shall continue. We shall fight! We shall break the chains of the Kaiserreich!"
 CSA_join_phalanstere:0 "Join the Phalanstere"
-CSA_join_phalanstere_desc:0 ""
+CSA_join_phalanstere_desc:0 "Now that we are part of the International, we should do our part and join the Phalanstere. American scientific knowledge shall combine with English and French to help syndicalism destroy capitalism around the world."
 CSA_war_plan_red:0 "War Plan Red"
 CSA_war_plan_red_desc:0 "The British Royal family in Canada represents one of the most dangerous enemies to the American people. We must begin planning on how to fight the Canadians and their Allies."
 CSA_great_northern_wall:0 "Great Northern Wall"
@@ -386,12 +386,6 @@ CSA_dominican_interventiom:0 "Dominican Republic Intervention"
 CSA_dominican_interventiom_desc:0 "We have liberated the comrades in Haiti now it is time to help liberate our comrades in the Dominican Republic. Their chains shall be broken and the people shall throw off the shackles of wage slavery. "
 CSA_brazilian_intervention:0 "Intervention in Brazil"
 CSA_brazilian_intervention_desc:0 "Brazil is a hot bed of Syndicalism and with their own revolution coming, it would not do if we do not do our part and ignore the plight of our comrades in the Brazil. We should do everything that we can to help the revolution there and if it fails there, we should do our part to continue it. "
-CSA_intervene_columbia:0 "Colombian Intervention"
-CSA_intervene_columbia_desc:0 "Columbia is a country that is ripe to spread syndicalism to. We need to do our part and help liberate the workers down in Columbia and free them from the reactionaries holding them back. "
-CSA_intervene_la_plata:0 "Intervene in La Plata"
-CSA_intervene_la_plata_desc:0 "With syndicalism established in Brazil, it is time to bring it to La Plata. While the enemies of our Brazilian Comrades, if we wish to have peace in the Americas, we need to help liberate La Plata and break the chains so that peace between Brazil and La Plata can exist."
-CSA_intervene_venezuel:0 "Intervene in Venezuela"
-CSA_intervene_venezuel_desc:0 "It is time to intervene in Venezuela and bring syndicalism to another group of South American Comrades. We shall help them break the chains!"
 CSA_red_pax_american:0 "Pax American"
 CSA_red_pax_american_desc:0 "Pax Americana or American Peace has been established across the continents of North and South America. While there are still some reactionaries, we have brought peace to the region and liberated the workers from capitalism. Let Worker's Peace reign!"
 
