--- a/localisation/KR_USA_l_english.yml
+++ b/localisation/KR_USA_l_english.yml
@@ -404,7 +404,7 @@ usa_supp_shachtman_faction:0 "USA government support Shachtman"
 usa_supp_reed_faction:0 "USA government support Reed"
 usa_supp_norman_faction:0 "USA government support Norman"
 usa_supp_long:0 "USA government support Long"
-usa_supp_kuhn_long_faction:0 "USA government support Long and Kuhn"
+usa_supp_kuhn_long_faction:0 "USA government support Long and Pelley"
 usa_supp_coughlin_faction:0 "USA government support Father Coughlin"
 usa_supp_smith_faction:0 "USA government support Smith"
 usa_supp_lindberg_faction:0 "USA government support Lindbergh"
