Focuses to build forts now actually build forts

--- a/localisation/KR_Ethiopia_l_english.yml
+++ b/localisation/KR_Ethiopia_l_english.yml
@@ -19,11 +19,17 @@ ETH_Naval_Doctrine:0 "Furthering the Naval Doctrine"
 ETH_Naval_Doctrine_desc:0 "More effort into the tactics of the sea!"
 ETH_Reform_Navy:0 "Reform the Navy!"
 ETH_Reform_Navy_desc:0 "Our hasty construction of a navy has jeopardised and organisation or leadership. We must reform yet another aspect of our great nation to make us a World Power!"
+ETH_Pan_A_Dream:0 "A PanAfrican Dream"
+ETH_Pan_A_Dream_desc:0 "We must keep the dream of PanAfricanism alive in our population!"
 
 ### Opinion Modifiers ###
 GER_railway_run:0 "Running the Railways"
 GER_railway_sold:0 "Sold the Railways"
 ETH_JAP_C:0 "Japanese Companies in Ethiopia"
+ETH_USA_I:0 "American Interests in Ethiopia"
+ETH_ENT_Offer:0 "An Offer from the Entente"
+ETH_Ger_S:0 "In the German Sphere of Influence"
+ETH_OTT_R:0 "Strategic Placement for the Ottoman Empire"
 
 ### Foci ###
 ETH_reform:0 "The Reforms!"
@@ -118,12 +124,12 @@ ETH_Out_Amb_desc:0 "Through our reforms, Ethiopia has once more become strong en
 ETH_Outwards_Amb:0 "We may now choose our Outwards Ambitions"
 ETH_Iso_S:0 "Consolidation"
 ETH_Iso_S:0 "We must not make our choice rashly. Rather, we must consider a wide range of ways to cement our strength. One of these ways is isolationism - and regardless of if we commit to it or not, we should follow some of its teachings."
-ETH_Fort_Idea:0 "Egyptian Fortifications"
-ETH_Fort_Idea_desc:0 "As part of our consolidation program, we must fortify our borders with the Egyptians."
+ETH_Fort_Egypt:0 "Egyptian Fortifications"
+ETH_Fort_Egypt_desc:0 "As part of our consolidation program, we must fortify our borders with the Egyptians."
 ETH_Fort_City:0 "Fortified Citys"
 ETH_Fort_City_desc:0 "It is time to add minor fortifications to our cities. This will help in the country's defence, if an attack should come, but will also help in the event of further rebellion!"
-ETH_Fort_Borders:0 "Southern Forts"
-ETH_Fort_Borders_desc:0 "Paranoia has grown with our consolidation. The Germans, once our friends, need to now be protected against. We must fortify our border with the colonial bastards, MittleAfrika"
+ETH_Fort_MIT:0 "Southern Forts"
+ETH_Fort_MIT_desc:0 "Paranoia has grown with our consolidation. The Germans, once our friends, need to now be protected against. We must fortify our border with the colonial bastards, MittleAfrika"
 ETH_Sea_Forts:0 "Sea Fortifications"
 ETH_Sea_Forts_desc:0 "It has come to our attention that attacks may not only come from our borders, but also from the sea. We must protect against this."
 ETH_Anti_Air:0 "Death to the Skies!"
@@ -148,10 +154,13 @@ ETH_Seize_Ger_Som:0 "Seize German Somaliland"
 ETH_Seize_Ger_Som_desc:0 "The Germans took land that was rightly ours in the first Weltkrieg. We must now take it back from them!"
 ETH_Intergrate_Ger_Som:0 "Integrate German Somaliland"
 ETH_Intergrate_Ger_Som_desc:0 "Now we have seized German Somaliland we must integrate it into glorious Ethiopia!"
+ETH_Ger_Som_Fort:0 "Fortify ex-German Somaliland"
+ETH_Ger_Som_Fort_desc:0 "We must bring our new land up to scratch with the rest of our empire!"
 ETH_Pan_Dream:0 "A PanAfrican Dream"
 ETH_Pan_Dream_desc:0 "Our heroic liberation of German colonial land may be the start of something much greater - the PanAfrican movement. However, our economy is not in a fit state to continue this. We can at least keep the dream going in our population."
 ETH_MPB:0 "Closer Bonds with Major Nations"
 ETH_MPB_desc:0 "We must not make our choice rashly. Rather, we must consider a wide range of ways to cement our strength. One of these ways is forging closer ties with the major powers, European or otherwise - and regardless of if we commit to it or not, we should follow some of its teachings."
+ETH_Maj_Pow:0 "Major Powers may decide to take an interest in Ethiopia for a multitude of reasons."
 ETH_JAP_Com:0 "Japanese Companies"
 ETH_JAP_Com_desc:0 "Japanese companies have expressed an interest in setting up in Ethiopia. Letting them do so would both please the Japanese government and give us some economic benefits."
 ETH_JAP_Interests:0 "Japan has developed an interest in our country"
