--- a/localisation/KR_Ukraine_l_english.yml
+++ b/localisation/KR_Ukraine_l_english.yml
@@ -303,3 +303,30 @@ UKR_Donbass_Industry_desc:0 "After a long period of political turbulence, the si
 
 UKR_Reorg_army:0 "New army of Ukraine"
 UKR_Reorg_army_desc:0 "The army of Ukraine is in poor condition as the Kingdom itself. But though the Berlin Stock Crisis made us reduce the military budget, but we still have enough money to launch the new reform, which will allow us to reorganize the Ministry of defence. It's time to strengthen our independence and secure our borders from the various enemies of Ukraine."
+
+UKR_Newforpol:0 "New foreign policy"
+UKR_Newforpol_desc:0 "-"
+UKR_Ties_Germany:0 "Strengthen the ties with Germany!"
+UKR_Ties_Germany_desc:0 "-"
+UKR_Gerukr_army:0 "German arms"
+UKR_Gerukr_army_desc:0 "-"
+UKR_Ostwall_focus:0 "Ostwall"
+UKR_Ostwall_focus_desc:0 "-"
+UKR_is_alone:0 "Splendid isolation"
+UKR_is_alone_desc:0 "-"
+UKR_Mozyr_claim:0 "White Ruthenian border"
+UKR_Mozyr_claim_desc:0 "-"
+UKR_Bessarabia_claim:0 "Blue Danube"
+UKR_Bessarabia_claim_desc:0 "-"
+UKR_Fra_cooperation:0 "Cooperation with France"
+UKR_Fra_cooperation_desc:0 "-"
+UKR_Fra_alliance:0 "Syndicalist unity"
+UKR_Fra_alliance_desc:0 "-"
+UKR_Fra_claims:0 "Red Liberation"
+UKR_Fra_claims_desc:0 "-"
+UKR_RUS_friendship:0 "Great Union"
+UKR_RUS_friendship_desc:0 "-"
+UKR_RUS_Officers:0 "Northern Wind"
+UKR_RUS_Officers_desc:0 "-"
+UKR_RUS_Galicia:0 "Galician question"
+UKR_RUS_Galicia_desc:0 "-"
