Spelling fixes for all

--- a/localisation/KR_Combined_Syndicates_of_America_l_english.yml
+++ b/localisation/KR_Combined_Syndicates_of_America_l_english.yml
@@ -110,10 +110,10 @@ CSA_fighting_women:0 "The Rebel Girl"
 CSA_fighting_women_desc:0 "That's the Rebel Girl, that's the Rebel Girl! / To the working class she's a precious pearl. / She brings courage, pride and joy / To the fighting Rebel Boy. / We've had girls before, but we need some more / In the Industrial Workers of the World. For it's great to fight for freedom / With a Rebel Girl."
 CSA_milita_integration:0 "Integrate the Militias"
 CSA_milita_integration_desc:0 "Now that we have decided to form a proper army, we should integrate the militias into the new Revolutionary army. This way that they are now part of the fighting force. Some will resist of course, but this is necessary for the good of the Revolution. We can help the integration by letting them keep their current elected officers. "
-CSA_new_model_army:0 "Centralized High Command"
+CSA_new_model_army:0 "Centralised High Command"
 CSA_new_model_army_desc:0 "To wage war against the reactionaries and the capitalists we need a centralised military command. A joint chiefs of staff shall be created that shall be created to plan the war against the reactionary forces that keep the workers in wage slavery."
 CSA_centralized_command:0 "Officer Initiatives"
-CSA_centralized_command_desc:0 "Centralized planning is good, but few plans survive contact with the enemy. We should train our officers to be able to properly adjust plan on the move and adapt their plans. With rapid planning we will be able to destroy the reactionary capitalists once and for all."
+CSA_centralized_command_desc:0 "Centralised planning is good, but few plans survive contact with the enemy. We should train our officers to be able to properly adjust plan on the move and adapt their plans. With rapid planning we will be able to destroy the reactionary capitalists once and for all."
 CSA_war_is_a_racket:0 "War is a Racket"
 CSA_war_is_a_racket_desc:0 "War is a racket. it always has been. We say no to that. War has been fought for the greed of capitalists throughout history. But not in the new Revolutionary army. Here we fight for the people. To this end, our army shall be organised to protect the lives of soldiers. We shall instead destroy capitalism with overwhelming firepower. Bullets are cheap, lives are not."
 CSA_peoples_artilary:0 "Fire the Guns"
@@ -267,7 +267,7 @@ CSA_found_american_raido_desc:0 "It has been proposed that we merge the various 
 CSA_found_the_cia:0 "Found the CIA"
 CSA_found_the_cia_desc:0 "The revolution has taught us that we need to have espionage. It is a necessary evil, but it is necessary. Thus we shall create the Central Intelligence Agency. This will keep America safe from the reactionaries and help us promote syndicalism in other countries covertly. The CIA will be our sword in the darkness to strike against reactionaries wherever they may hide. "
 CSA_centralized_union:0 "Centralised Union"
-CSA_centralized_union_desc:0 "After several days of heated debate between the delegates in Philadelphia, the centralists were victorious. Their ideal of a centralised totalist Federal government. For the Revolution to bring forth we shall have a centralised union. "
+CSA_centralized_union_desc:0 "After several days of heated debate between the delegates in Philadelphia, the Centralists were victorious. Their ideal of a centralised totalist Federal government. For the Revolution to bring forth we shall have a centralised union. "
 CSA_centralist_victory_tooltip:0 "The Centralists will need to be victorious in the convention"
 CSA_revolutionary_guards:0 "Revolutionary Guards"
 CSA_revolutionary_guards_desc:0 "In order to protect the Revolutionary ideals of the revolution, we need to form an elite revolutionary guards that shall protect the ideals of the revolution. This will prevent any and all counter-revolutionaries from opposing our glorious revolution."
@@ -683,7 +683,7 @@ combinedsyndicates.215.t:0 "Central American War is over"
 combinedsyndicates.215.d:0 "For good or for ill are volunteers have arrived back in America following the war in central America. Our soldiers seemed to have learned much fighting in Central America."
 combinedsyndicates.215.a:0 "Welcome Home"
 combinedsyndicates.216.t:0 "War against the United Provinces?"
-combinedsyndicates.216.d:0 "Centroamérica has fallen to the United Provinces and we have a number of exiles and refuges in America who are asking us to go to war with the corrupt United Provinces of Central America. Many within the government are also in favor of using our influence to smash capitalism in the region."
+combinedsyndicates.216.d:0 "Centroamérica has fallen to the United Provinces and we have a number of exiles and refuges in America who are asking us to go to war with the corrupt United Provinces of Central America. Many within the government are also in favour of using our influence to smash capitalism in the region."
 combinedsyndicates.216.a:0 "America shall Liberate Centroamérica!"
 combinedsyndicates.216.b:0 "We need to focus on America First"
 
@@ -734,7 +734,7 @@ combinedsyndicates.229.t:0 "Dominican Revolution is victorious!"
 combinedsyndicates.229.d:0 "We have received word from The Dominican Republic that the revolution is successful. A new government by the Dominican People is in Power. One less country in the Caribbean is enslaved by capitalism."
 combinedsyndicates.229.a:0 "Great Work Comrades!"
 combinedsyndicates.230.t:0 "Dominican Revolution has failed"
-combinedsyndicates.230.d:0 "We have received word from The Dominican Republic that the revolution has failed. Despite the great valor of our comrades in The Dominican Republic, the Army was able to smash them and many are wondering if America should retaliate and smash Capitalism in America ourselves or if we should just let it be for now."
+combinedsyndicates.230.d:0 "We have received word from The Dominican Republic that the revolution has failed. Despite the great valour of our comrades in The Dominican Republic, the Army was able to smash them and many are wondering if America should retaliate and smash Capitalism in America ourselves or if we should just let it be for now."
 combinedsyndicates.230.a:0 "We shall go to The Dominican Republic and Liberate the Dominicans!"
 combinedsyndicates.230.b:0 "It is not worth a war over"
 combinedsyndicates.231.t:0 "Revolutionary Thanks"
@@ -752,7 +752,7 @@ combinedsyndicates.234.t:0 "Panamanian Revolution is victorious!"
 combinedsyndicates.234.d:0 "We have received word from Panama that the revolution is successful. A new government by the Panamanian People is in Power. One less country in the Caribbean is enslaved by capitalism."
 combinedsyndicates.234.a:0 "Great Work Comrades!"
 combinedsyndicates.235.t:0 "Panamanian Revolution has failed"
-combinedsyndicates.235.d:0 "We have received word from Panama that the revolution has failed. Despite the great valor of our comrades in Panama, the Army was able to smash them and many are wondering if America should retaliate and smash Capitalism in America ourselves or if we should just let it be for now."
+combinedsyndicates.235.d:0 "We have received word from Panama that the revolution has failed. Despite the great valour of our comrades in Panama, the Army was able to smash them and many are wondering if America should retaliate and smash Capitalism in America ourselves or if we should just let it be for now."
 combinedsyndicates.235.a:0 "We shall go to Panama and Liberate the Panamanians!"
 combinedsyndicates.235.b:0 "It is not worth a war over"
 combinedsyndicates.236.t:0 "Revolutionary Thanks"
