--- a/localisation/KR_Hawaii_l_english.yml
+++ b/localisation/KR_Hawaii_l_english.yml
@@ -14,7 +14,7 @@ HAW_constitutional_monarchy_desc:0 "We shall set up our monarchy to be a constit
 HAW_punana_leo:0 "Punana Leo"
 HAW_punana_leo_desc:0 "Meaning Language Nests, the Punana Leo is a school program that the monarchy has proposed to restore the usage of the native Hawai'ian Language among the people. As part of the program numerous schools would be established throughout the kingdom on all the different islands."
 HAW_hawaiian_renassiance:0 "Hawai'ian Renaissance"
-HAW_hawaiian_renassiance_desc:0 "A movement has been stiring throughout the kingdom of a second Hawai'ian Renaissance. The native culture of Hawai'i that was suppressed by the Americans is now being celebrated by all Hawai'ians regardless of ethnicity. A new surge in patriotism and nationalism has been sweeping Hawaii as many start to consider themselves separate from America. "
+HAW_hawaiian_renassiance_desc:0 "A movement has been stirring throughout the kingdom of a second Hawai'ian Renaissance. The native culture of Hawai'i that was suppressed by the Americans is now being celebrated by all Hawai'ians regardless of ethnicity. A new surge in patriotism and nationalism has been sweeping Hawaii as many start to consider themselves separate from America. "
 HAW_republic:0 "Hawai'ian Republic"
 HAW_republic_desc:0 "Now that the fate is in our hand it is best to establish a republic. The age of kings is over. Moreover, while America may be in crisis now, its government form is clearly a better model then a monarchy. Here the people will have a voice.  "
 HAW_support_big_five:0 "Support the Big Five"
@@ -22,7 +22,7 @@ HAW_support_big_five_desc:0 "As we establish our new Republic it is best that we
 HAW_republicanism:0 "Republicanism"
 HAW_republicanism_desc:0 "We should make sure to educate our people in the virtues of Republicanism. This way all Hawai'ians will support and defend the Hawai'ian republic and not wish to destroy our beloved nation.  "
 HAW_education_expansion:0 "Education Expansion" 
-HAW_education_expansion_desc:0 "Children our our future and if we are going to have a future as an independent republic then we should help make sure that all our people our properly educated to be civilized people."
+HAW_education_expansion_desc:0 "Children our our future and if we are going to have a future as an independent republic then we should help make sure that all our people our properly educated to be civilised people."
 HAW_multi_culturalism:0 "Multiculturalism"
 HAW_multi_culturalism_desc:0 "Hawai'i has numerous different people from all over the world from Natives to Japanese and Europeans. We should celebrate our multicultural country and what makes us all Hawai'ians. "
 HAW_hawaiian_revolution:0 "Hawai'ian Revolution"
