--- a/localisation/KR_Peru_l_english .yml
+++ b/localisation/KR_Peru_l_english .yml
@@ -9,9 +9,9 @@ PRU_BM_lvl1:0 "Recovering Economy"
 PRU_BM_lvl1_desc:0 "Our Economy is finally recovering from Black Monday"
 PRU_backontrack:0 "Economy Back on Track"
 PRU_backontrack_desc:0 "Our economy is indeed fully recovered from Black Monday, and the incentives we implemented ensure further growth"
-PRU_united_studies:0 "Federared Scientific Exchange"
+PRU_united_studies:0 "Federated Scientific Exchange"
 PRU_united_studies_desc:0 "The Federation between Peru and Bolivia means that the greatest minds of our countries can work as one"
-PRU_federated_admin: "Federared Administration"
+PRU_federated_admin: "Federated Administration"
 PRU_federated_admin_desc:0 "Our union, now with a constitution and other legal grounding, is a more resilient state than before"
 PRU_military_lobby:0 "Hawk Lobby"
 PRU_military_lobby_desc:0 "Military equipment manufacturers from home and abroad are heavily lobbying our government"
@@ -206,7 +206,7 @@ PRU_hotel_effort:0 "Urban Renewal Projects"
 PRU_hotel_effort_desc:0 "Our cities lack the capital for heavy investment in their economy and infrastructure. We must aid them if the country is to have prosperity again"
 PRU_peruvian_brotherhood:0 "The Peruivian Brotherhood"
 PRU_peruvian_brotherhood_desc:0 "Our coming to power will be remembered as the day Peru got rid of ineffective plutocrats and idol worshippers who abandoned Christ. Forever to be honoured will be those who died in the transition, and now we look ahead, to a bright future!"
-PRU_army_supremacy:0 "Militarilist Supremacy"
+PRU_army_supremacy:0 "Militarist Supremacy"
 PRU_army_supremacy_desc:0 "Our army saved us when Democracy failed us, just like it saved Peru when diplomacy with Spain failed. Our military has a glorious legacy harkening back to Visigoth Warriors of the Faith, all the way to our generation. Such a mighty legacy cannot go unrecognised"
 PRU_imperial_legacy:0 "Imperial Legacy"
 PRU_imperial_legacy_desc:0 "We now establish ourselves, not as a feeble republic, but as a true Empire, in the old sense of the word. Not a King, for these lands have no kings but heathens, but our Leader will guide us. Imperial regalia and standards will replace those symbols of weakness we once flew as flags and wore as badges"
@@ -226,7 +226,7 @@ PRU_the_phalanx_state:0 "Corporatist Reforms"
 PRU_the_phalanx_state_desc:0 "The popularity of sinful ideologies is naturally a symptom of unemployment, especially among the Natives who have forgotten the natural order of things and demand equality from us, the ones who Conquered the and saved their souls. If we are to survive the red tide, we must ensure all are working for the good of Peru"
 PRU_the_glory_of_the_new_world:0 "The Glory of the New World"
 PRU_the_glory_of_the_new_world_desc:0 "If we are to truly honour the legacy of our ancestors and our Faith, we must ensure our army is well trained and equipped; it must be The Glory of the New World!"
-PRU_conqueror_heiriatage:0 "Conquistador Heriatage"
+PRU_conqueror_heiriatage:0 "Conquistador Heritage"
 PRU_conqueror_heiriatage_desc:0 "We are the heirs of Pizarro, who vanquished hundreds of thousands of infidels armed only with his wit, faith and his loyal companions. Our army makes us proud and stronger in our faith"
 PRU_hispanidad_imperial:0 "Hispanidad Imperial"
 PRU_hispanidad_imperial_desc:0 "Our legacy, our history, it all leads up to the current day, where we must take a hold of our legacy and crush those who abandoned Christ in favour the Reichsmark or Marx. All the enemies of the what is pure and good in Peru have their days numbered!"
